[package]
name = "solana-vanity-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono", "tls-rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.4"
reqwest = { version = "0.11", features = ["json"] }


ed25519-dalek = "2.1"
bs58 = "0.5"




[dev-dependencies]
reqwest = "0.11"